...
    <string name="menu_help">About</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="reminder_off_title">Press timer to start work</string>
    <string name="eula_accept">I accept</string>
    <string name="eula_reject">No thanks</string>
...
    <string name="notification_sample_text">Sample text for period end notification</string>
    <string name="close_notification">Close</string>
    <string name="on_work_period">Work</string>
    <string name="on_rest_period">Rest</string>
    <string name="extend">extend</string>
    <string name="description_extended">extended %1$d times</string>
...
    <string name="pref_mode_title_manual">manual</string>
    <string name="pref_mode_title_automatic">automatic</string>
    <string name="pref_mode_summary_automatic">Following periods start automatically</string>
    <string name="pref_mode_summary_manual">Periods are started after user confirmation</string>
    <string name="pref_mode_key">reminder_mode</string>
    <string name="pref_category_basic_settings_key">basic_settings_category</string>
    <string name="pref_category_basic_settings_title">General settings</string>
    <string name="pref_screen_periods_key">screen_period_length</string>
    <string name="pref_screen_periods_title">Work and rest period settings</string>
    <string name="pref_screen_extension_title">Period extension settings</string>
    <string name="pref_work_period_length_key">work_period_length</string>
    <string name="pref_work_period_length_title">Work period length</string>
    <string name="pref_work_period_length_dialog_text">Set period length in hours and minutes</string>
    <string name="short_period_warning">Note: Selecting a period length, that is shorter than 10 minutes, can result in delayed period end notifications. If such issues occur, try disabling battery optimisation for Rest Reminder in device settings.</string>
    <string name="pref_rest_period_length_key">rest_period_length</string>
    <string name="pref_rest_period_length_title">Rest period length</string>
    <string name="pref_rest_period_length_dialog_text">Set period length in hours and minutes</string>
    <string name="pref_work_period_start_sound_key">work_period_start_sound</string>
    <string name="pref_work_period_start_sound_title">Work period start sound</string>
    <string name="pref_rest_period_start_sound_key">rest_period_start_sound</string>
    <string name="pref_rest_period_start_sound_title">Rest period start sound</string>
    <string name="pref_disable_battery_optimization_key">disable_battery_optimization</string>
    <string name="pref_disable_battery_optimization_title">Open battery optimization settings</string>
    <string name="pref_disable_battery_optimization_prefix">Battery optimization is </string>
    <string name="pref_disable_battery_optimization_disabled">DISABLED</string>
    <string name="pref_disable_battery_optimization_enabled">ENABLED</string>
    <string name="pref_category_features_key">features_category</string>
    <string name="pref_category_features_title">Feature settings</string>
...
    <string name="pref_approx_time_sound_title">Proximity alarm sound</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="pref_end_period_key">enable_end_period</string>
    <string name="pref_end_period_title">End current period</string>
    <string name="pref_end_period_summary">Force current period to end</string>
    <string name="pref_enable_approx_notification_key">enable_approx_notification_key</string>
    <string name="pref_enable_approx_notification_title">Proximity alarm</string>
    <string name="pref_enable_approx_notification_summary">Sound alarm notifies about the upcoming period end</string>
...
    <string name="pref_enable_vibrate_title">Enable vibration</string>
    <string name="pref_screen_period_extend_key">pref_screen_period_extend_key</string>
    <string name="pref_screen_period_extend_title">Extend period settings</string>
    <string name="pref_enable_extend_key">enable_end_extend</string>
    <string name="pref_enable_extend_summary">Extend current period</string>
    <string name="pref_enable_extend_title">Extend period</string>
    <string name="pref_enable_short_periods_key">enable_short_periods_extend</string>
    <string name="pref_enable_short_periods_summary">Periods can be less than 10 minutes short</string>
    <string name="pref_enable_short_periods_title">Allow short periods</string>
    <string name="pref_period_extend_length_key">end_extend_length_key</string>
    <string name="pref_period_extend_length_title">Extension base length</string>
    <string name="pref_period_extend_length_summary">Set the period end extend duration in minutes</string>
    <string name="pref_period_extend_length_dialog_text">Set the extend in minutes (1&#8211;120)</string>
    <string name="pref_period_extend_options_key">end_extend_options_key</string>
    <string name="pref_period_extend_options_title">Amount of extension options</string>
    <string name="pref_period_extend_options_dialog_text">Choose the amount of extend options</string>
...
    <string name="pref_hour_single">1 hour</string>
    <string name="pref_hour_multiple">%1$d hours</string>
    <string name="pref_minute_single">1 minute</string>
    <string name="pref_minute_multiple">%1$d minutes</string>
    <string name="pref_second_single">1 second</string>
    <string name="pref_second_multiple">%1$d seconds</string>
    <string name="pref_summary_and">and</string>
    <string name="pref_options_single">1 option</string>
    <string name="pref_options_multiple">%1$d options</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_fragment_tag">preference_fragment</string>
...

    <!--  Preference default string values -->
    <string name="default_work_length_string">00:45</string>
    <string name="default_rest_length_string">00:15</string>
    <string name="default_approx_length_string">00:30</string>
    <!-- TimePreference -->
...
