...
        android:layout_below="@id/custom_time_preference_title"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >

        <NumberPicker
            android:id="@+id/time_preference_first_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:descendantFocusability="blocksDescendants"/>

        <NumberPicker
            android:id="@+id/time_preference_second_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:descendantFocusability="blocksDescendants"/>

    </LinearLayout>
...
