...
			    android:textColor="@color/white"
			    android:background="@drawable/btn_info" />
		   
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_above="@+id/timer_layout"
			    android:layout_marginBottom="5dp"
			    android:gravity="center_vertical"
			    android:orientation="vertical" >
			    
				<TextView
				    android:id="@+id/period_title"
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="@dimen/period_title_marginBottom"
				    style="@style/TitleFont"
				    android:gravity="center_vertical|center"  />
			
...
