...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BatterySettingsDialog" >

    <TextView
        android:id="@+id/inconsistent_behaviour_battery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/battery_dialog_inconsistent_warning"
        style="@style/BatteryDialogTitle"/>


...
